--- a/home.html
+++ b/home.html
@@ -1,1 +1,20 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>stopwatch and pomodoro timer </title>
+    <link rel="stylesheet" type="text/css" href="home.css">
+  </head>
+  <body>
+    <div class="container">
+      <div class="box">
+        <div class="btn">
+          <button class="btn"><a href="stopwatch.html">STOPWATCH</a></button>
+          <button class="btn"><a href="timer.html">TIMER</a></button>
+        </div>
+      </div>
+    </div>
+    
+    <div class="content">  
+    </div>
+  </body>
+</html>
