--- a/timer.html
+++ b/timer.html
@@ -1,1 +1,26 @@
+<head>
+  <meta charset="UTF-8">
+  <title>Timer</title>
+  <link rel="stylesheet" href="timer.css">
+  <script src="timer.js" crossorigin="anonymous"/></script>
 
+</head>
+<div id="pomodoro-app">
+  <div id="container">
+    <div id="timer">
+      <div id="time">
+        <span id="minutes">25</span>
+        <span id="colon">:</span>
+        <span id="seconds">00</span>
+      </div>
+      <div id="filler"></div>
+    </div>
+
+    <div id="buttons">
+      <button id="work">Work</button>
+      <button id="shortBreak">ShortBreak</button>
+      <button id="longBreak">LongBreak</button>
+      <button id="stop">Stop</button>
+    </div>
+  </div>
+</div>
